--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "49df3682-33fe-4e35-9d91-cbad5e09f98b"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
